@@ -1,3 +1,8 @@
+Mon Mar 23 23:18:27 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* dir.c (dir_close): don't raise on dobule close for consistent to
+	  IO#close.
+
 Mon Mar 23 21:22:07 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* win32/file.c (rb_readlink): move from file.c for better buffer
